[package]
name = "ported"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
stm32l0xx-hal = { version = "0.8.0", features = [ "mcu-STM32L051K6Tx", "rt"] }
panic-halt = "*"
cortex-m-rt = "*"
cortex-m = "*"